note book revisions

--- a/machine_learning/notebooks/2. Hyperparameter Optimization.ipynb
+++ b/machine_learning/notebooks/2. Hyperparameter Optimization.ipynb
@@ -275,11 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2023-11-25T00:16:43.327669Z",
      "start_time": "2023-11-25T00:14:42.020617Z"
     }
    },
@@ -312,7 +312,116 @@
       "Test Accuracy: 0.9459\n",
       "Validation Loss: 0.1369\n",
       "Validation Accuracy: 0.9784\n",
-      "Fold: 2, Training Loss: 0.0744, Validation Accuracy: 0.9784\n"
+      "Fold: 2, Training Loss: 0.0744, Validation Accuracy: 0.9784\n",
+      "Epoch [1/3], Loss: 0.0855, Accuracy: 0.9798\n",
+      "Test Loss: 0.2142\n",
+      "Test Accuracy: 0.9541\n",
+      "Epoch [2/3], Loss: 0.0546, Accuracy: 0.9876\n",
+      "Test Loss: 0.2505\n",
+      "Test Accuracy: 0.9635\n",
+      "Epoch [3/3], Loss: 0.0500, Accuracy: 0.9852\n",
+      "Test Loss: 0.3190\n",
+      "Test Accuracy: 0.9482\n",
+      "Validation Loss: 0.0226\n",
+      "Validation Accuracy: 0.9924\n",
+      "Fold: 3, Training Loss: 0.0500, Validation Accuracy: 0.9924\n",
+      "Epoch [1/3], Loss: 0.0494, Accuracy: 0.9865\n",
+      "Test Loss: 0.3130\n",
+      "Test Accuracy: 0.9588\n",
+      "Epoch [2/3], Loss: 0.0518, Accuracy: 0.9876\n",
+      "Test Loss: 0.3397\n",
+      "Test Accuracy: 0.9565\n",
+      "Epoch [3/3], Loss: 0.0306, Accuracy: 0.9911\n",
+      "Test Loss: 0.3480\n",
+      "Test Accuracy: 0.9541\n",
+      "Early stopping\n",
+      "Validation Loss: 0.0389\n",
+      "Validation Accuracy: 0.9914\n",
+      "Fold: 4, Training Loss: 0.0306, Validation Accuracy: 0.9914\n",
+      "Epoch [1/3], Loss: 0.0316, Accuracy: 0.9916\n",
+      "Test Loss: 0.3907\n",
+      "Test Accuracy: 0.9494\n",
+      "Epoch [2/3], Loss: 0.0282, Accuracy: 0.9914\n",
+      "Test Loss: 0.4253\n",
+      "Test Accuracy: 0.9565\n",
+      "Epoch [3/3], Loss: 0.0338, Accuracy: 0.9900\n",
+      "Test Loss: 0.3832\n",
+      "Test Accuracy: 0.9588\n",
+      "Early stopping\n",
+      "Validation Loss: 0.0107\n",
+      "Validation Accuracy: 0.9968\n",
+      "Fold: 5, Training Loss: 0.0338, Validation Accuracy: 0.9968\n",
+      "Foldloss: 0.0338\n",
+      "Average validation accuracy: 0.9862\n",
+      "Test Loss: 0.4096\n",
+      "Test Accuracy: 0.9588\n",
+      "Test Accuracy: 0.9588\n",
+      "lr: 0.001116980057505453, hidden_dim: 256, embedding_dim: 128, dropout_rate: 0.3884483794110311, weight_decay: 1.028033931816843e-05\n",
+      "Epoch [1/3], Loss: 1.3206, Accuracy: 0.7448\n",
+      "Test Loss: 0.5971\n",
+      "Test Accuracy: 0.8753\n",
+      "Epoch [2/3], Loss: 0.4303, Accuracy: 0.9072\n",
+      "Test Loss: 0.5399\n",
+      "Test Accuracy: 0.9059\n",
+      "Epoch [3/3], Loss: 0.2784, Accuracy: 0.9390\n",
+      "Test Loss: 0.3703\n",
+      "Test Accuracy: 0.9329\n",
+      "Validation Loss: 0.1218\n",
+      "Validation Accuracy: 0.9687\n",
+      "Fold: 1, Training Loss: 0.2784, Validation Accuracy: 0.9687\n",
+      "Epoch [1/3], Loss: 0.2127, Accuracy: 0.9509\n",
+      "Test Loss: 0.4129\n",
+      "Test Accuracy: 0.9388\n",
+      "Epoch [2/3], Loss: 0.1637, Accuracy: 0.9633\n",
+      "Test Loss: 0.3995\n",
+      "Test Accuracy: 0.9388\n",
+      "Epoch [3/3], Loss: 0.1363, Accuracy: 0.9692\n",
+      "Test Loss: 0.3984\n",
+      "Test Accuracy: 0.9235\n",
+      "Validation Loss: 0.1779\n",
+      "Validation Accuracy: 0.9471\n",
+      "Fold: 2, Training Loss: 0.1363, Validation Accuracy: 0.9471\n",
+      "Epoch [1/3], Loss: 0.1347, Accuracy: 0.9706\n",
+      "Test Loss: 0.3202\n",
+      "Test Accuracy: 0.9529\n",
+      "Epoch [2/3], Loss: 0.0945, Accuracy: 0.9744\n",
+      "Test Loss: 0.3650\n",
+      "Test Accuracy: 0.9518\n",
+      "Epoch [3/3], Loss: 0.0874, Accuracy: 0.9741\n",
+      "Test Loss: 0.3191\n",
+      "Test Accuracy: 0.9553\n",
+      "Validation Loss: 0.0684\n",
+      "Validation Accuracy: 0.9860\n",
+      "Fold: 3, Training Loss: 0.0874, Validation Accuracy: 0.9860\n",
+      "Epoch [1/3], Loss: 0.0940, Accuracy: 0.9738\n",
+      "Test Loss: 0.3144\n",
+      "Test Accuracy: 0.9447\n",
+      "Epoch [2/3], Loss: 0.0683, Accuracy: 0.9811\n",
+      "Test Loss: 0.3250\n",
+      "Test Accuracy: 0.9565\n",
+      "Epoch [3/3], Loss: 0.0485, Accuracy: 0.9868\n",
+      "Test Loss: 0.3018\n",
+      "Test Accuracy: 0.9659\n",
+      "Validation Loss: 0.0115\n",
+      "Validation Accuracy: 0.9968\n",
+      "Fold: 4, Training Loss: 0.0485, Validation Accuracy: 0.9968\n",
+      "Epoch [1/3], Loss: 0.0657, Accuracy: 0.9844\n",
+      "Test Loss: 0.3045\n",
+      "Test Accuracy: 0.9588\n",
+      "Epoch [2/3], Loss: 0.0513, Accuracy: 0.9868\n",
+      "Test Loss: 0.2958\n",
+      "Test Accuracy: 0.9624\n",
+      "Epoch [3/3], Loss: 0.0393, Accuracy: 0.9873\n",
+      "Test Loss: 0.2657\n",
+      "Test Accuracy: 0.9706\n",
+      "Validation Loss: 0.0196\n",
+      "Validation Accuracy: 0.9946\n",
+      "Fold: 5, Training Loss: 0.0393, Validation Accuracy: 0.9946\n",
+      "Foldloss: 0.0393\n",
+      "Average validation accuracy: 0.9786\n",
+      "Test Loss: 0.2557\n",
+      "Test Accuracy: 0.9706\n",
+      "Test Accuracy: 0.9706\n"
      ]
     }
    ],
@@ -357,13 +466,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-25T00:16:43.335695Z",
+     "start_time": "2023-11-25T00:16:43.329402Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -381,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "\n",
@@ -394,20 +506,35 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-25T00:16:43.375687Z",
+     "start_time": "2023-11-25T00:16:43.337721Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-25T00:16:43.387604Z",
+     "start_time": "2023-11-25T00:16:43.377627Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best trial: score 0.9903,\n",
+      "params {'lr': 0.0013487934809448435, 'hidden_dim': 64, 'embedding_dim': 128, 'dropout_rate': 0.17918187700846566, 'weight_decay': 4.75333827188117e-05}\n"
+     ]
+    }
+   ],
    "source": [
     "best_trial = study.best_trial\n",
     "print(f'Best trial: score {best_trial.value:.4f},\\nparams {best_trial.params}')"
@@ -415,15 +542,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-25T00:17:24.868850Z",
+     "start_time": "2023-11-25T00:16:43.389755Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/15], Loss: 1.1125, Accuracy: 0.7943\n",
+      "Test Loss: 0.6413\n",
+      "Test Accuracy: 0.8835\n",
+      "Epoch [2/15], Loss: 0.3232, Accuracy: 0.9344\n",
+      "Test Loss: 0.6764\n",
+      "Test Accuracy: 0.9106\n",
+      "Epoch [3/15], Loss: 0.1815, Accuracy: 0.9603\n",
+      "Test Loss: 0.3442\n",
+      "Test Accuracy: 0.9400\n",
+      "Epoch [4/15], Loss: 0.1244, Accuracy: 0.9722\n",
+      "Test Loss: 0.3034\n",
+      "Test Accuracy: 0.9482\n",
+      "Epoch [5/15], Loss: 0.0868, Accuracy: 0.9791\n",
+      "Test Loss: 0.3000\n",
+      "Test Accuracy: 0.9518\n",
+      "Epoch [6/15], Loss: 0.0682, Accuracy: 0.9827\n",
+      "Test Loss: 0.3063\n",
+      "Test Accuracy: 0.9565\n",
+      "Epoch [7/15], Loss: 0.0700, Accuracy: 0.9842\n",
+      "Test Loss: 0.3326\n",
+      "Test Accuracy: 0.9576\n",
+      "Epoch [8/15], Loss: 0.0535, Accuracy: 0.9862\n",
+      "Test Loss: 0.4206\n",
+      "Test Accuracy: 0.9600\n",
+      "Epoch [9/15], Loss: 0.0600, Accuracy: 0.9864\n",
+      "Test Loss: 0.3738\n",
+      "Test Accuracy: 0.9576\n",
+      "Epoch [10/15], Loss: 0.0520, Accuracy: 0.9875\n",
+      "Test Loss: 0.3775\n",
+      "Test Accuracy: 0.9553\n",
+      "Epoch [11/15], Loss: 0.0249, Accuracy: 0.9937\n",
+      "Test Loss: 0.2841\n",
+      "Test Accuracy: 0.9647\n",
+      "Early stopping\n",
+      "Test Loss: 0.2852\n",
+      "Test Accuracy: 0.9647\n",
+      "Test Accuracy: 0.9647\n"
+     ]
+    }
+   ],
    "source": [
     "from machine_learning.learners.IntentClassifierLSTMWithAttention import IntentClassifierLSTMWithAttention\n",
     "from machine_learning.pipelines.data_loaders import train_loader, test_loader, tokenizer\n",
@@ -459,20 +633,32 @@
    },
    "source": [
     "### Save the model\n",
-    "Lets' use a clever construct to save the model. The model is saved with its class name. The parameters are saved in order in a json file. Later on this model can be recreated by providing the class name in the constructor and loading the parameters from the json file. The model state dictionary is saved in a separate file. The tokenizer and label encoder are also saved in separate files."
+    "One can save the model in a number of ways. torch.save and torch.load are the most common ways, however this creates a pickle file and can cause python version issues. Saving the model state dictionary and loading it later is a better way. Because it can be mapped to any model class and device. For quick notebook saving and loading I use torch.save and torch.load. For production, I use model state dictionary and provide a clever construct to save the model. The model is saved with its class name. The parameters are saved in order in a json file. Later on this model can be recreated by providing the class name in the constructor and loading the parameters from the json file. The model state dictionary is saved in a separate file. The tokenizer and label encoder are also saved in separate files.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-25T00:17:24.880123Z",
+     "start_time": "2023-11-25T00:17:24.870403Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class_name=IntentClassifierLSTMWithAttention\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "class_name=model.__class__.__name__\n",
@@ -496,15 +682,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-25T00:17:24.902145Z",
+     "start_time": "2023-11-25T00:17:24.881260Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load the trained model and tokenizer from saved files\n",
     "from machine_learning.learners.intent_classifier import IntentClassifier\n",
@@ -515,15 +713,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-25T00:17:24.971170Z",
+     "start_time": "2023-11-25T00:17:24.901856Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'label': 'airfare', 'confidence': 0.9917524456977844}, {'label': 'abbreviation', 'confidence': 0.0018157875165343285}, {'label': 'ground_fare', 'confidence': 0.0017492893384769559}]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -535,15 +744,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-25T00:17:25.008552Z",
+     "start_time": "2023-11-25T00:17:24.971955Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'label': 'flight', 'confidence': 0.9957910776138306}, {'label': 'flight_time', 'confidence': 0.0013819440500810742}, {'label': 'airport', 'confidence': 0.0005671249236911535}]\n"
+     ]
+    }
+   ],
    "source": [
     "query_str = \"I want to book a hotel in New York\"\n",
     "response = model_serve.predict(query_str)\n",
@@ -566,13 +786,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-25T00:17:26.407415Z",
+     "start_time": "2023-11-25T00:17:25.009745Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -604,14 +827,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
     "scrolled": true,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-25T00:17:28.628641Z",
+     "start_time": "2023-11-25T00:17:26.412733Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -656,15 +882,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-11-25T00:17:28.691856Z",
+     "start_time": "2023-11-25T00:17:28.629467Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted label: ['airfare']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "array(['airfare'], dtype=object)"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from machine_learning.learners.model_utils import save_modelname_tokenizer, serve_modelname_query\n",
     "model_name=\"best_ICELSTMAmodel\"\n",
