--- a/4. Model Abstraction, Transformers .ipynb
+++ b/4. Model Abstraction, Transformers .ipynb
@@ -59,6 +59,19 @@
       "[1, 93, 86, 3, 4, 5, 28, 64, 3, 68, 23, 260, 265]\n",
       "mps\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ultimate_aiv2/lib/python3.9/site-packages/pydantic/_internal/_fields.py:126: UserWarning: Field \"model_server_url\" has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n",
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ultimate_aiv2/lib/python3.9/site-packages/pydantic/_internal/_config.py:261: UserWarning: Valid config keys have changed in V2:\n",
+      "* 'schema_extra' has been renamed to 'json_schema_extra'\n",
+      "  warnings.warn(message, UserWarning)\n"
+     ]
     }
    ],
    "source": [
@@ -113,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -202,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "329965f9-8bad-46aa-b2f3-b1a3ac1630c1",
    "metadata": {
     "ExecuteTime": {
@@ -217,8 +230,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='165' max='870' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [165/870 00:30 < 02:12, 5.30 it/s, Epoch 0.57/3]\n",
+       "      <progress value='870' max='870' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [870/870 02:46, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -230,15 +243,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>50</td>\n",
-       "      <td>2.881000</td>\n",
+       "      <td>2.928600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>100</td>\n",
-       "      <td>1.733100</td>\n",
+       "      <td>1.942800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>150</td>\n",
-       "      <td>0.854300</td>\n",
+       "      <td>0.993200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>200</td>\n",
+       "      <td>0.762800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>250</td>\n",
+       "      <td>0.523300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>300</td>\n",
+       "      <td>0.376600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>350</td>\n",
+       "      <td>0.257700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>400</td>\n",
+       "      <td>0.237000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>450</td>\n",
+       "      <td>0.180200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>500</td>\n",
+       "      <td>0.127300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>550</td>\n",
+       "      <td>0.100900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>600</td>\n",
+       "      <td>0.102100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>650</td>\n",
+       "      <td>0.091200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>700</td>\n",
+       "      <td>0.086800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>750</td>\n",
+       "      <td>0.069200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>800</td>\n",
+       "      <td>0.080700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>850</td>\n",
+       "      <td>0.012400</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -315,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ed9cecb1",
    "metadata": {
     "collapsed": false,
@@ -344,10 +413,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d1afde02-e977-4abd-8203-dc873dbe788f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='14' max='14' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [14/14 00:01]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 0.17269031703472137,\n",
+       " 'eval_runtime': 1.2019,\n",
+       " 'eval_samples_per_second': 707.192,\n",
+       " 'eval_steps_per_second': 11.648,\n",
+       " 'epoch': 3.0}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainer.evaluate()"
    ]
@@ -363,10 +465,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6a563561-1604-4bd0-a45a-2e4d8e521676",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: mps\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import torch\n",
@@ -396,10 +506,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0d9fa6a0-342b-4747-a2f1-b3e0b821deda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside IntentTokenizer\n",
+      "Actual Vocabulary Size: 890\n",
+      "Encoding labels for the first time and adding unknown class.\n",
+      "Label Encoding: {'abbreviation': 0, 'aircraft': 1, 'aircraft+flight+flight_no': 2, 'airfare': 3, 'airfare+flight_time': 4, 'airline': 5, 'airline+flight_no': 6, 'airport': 7, 'capacity': 8, 'cheapest': 9, 'city': 10, 'distance': 11, 'flight': 12, 'flight+airfare': 13, 'flight_no': 14, 'flight_time': 15, 'ground_fare': 16, 'ground_service': 17, 'ground_service+ground_fare': 18, 'meal': 19, 'quantity': 20, 'restriction': 21, '<unknown>': 22}\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer = IntentTokenizer(train_df)"
    ]
@@ -416,10 +537,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8331cd3e-861f-4575-95df-0944c07ed696",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training samples: torch.Size([4634, 46])\n",
+      "Number of test samples: torch.Size([850, 30])\n",
+      "Number of training batches: 145\n",
+      "Number of test batches: 27\n"
+     ]
+    }
+   ],
    "source": [
     "# Example usage\n",
     "train_data = tokenizer.process_data(train_df,device=device)\n",
@@ -445,10 +577,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "00421fd7-9909-4da8-86d4-d6dbca069d53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocab Size: 892\n",
+      "Embedding Dim: 64\n",
+      "Hidden Dim: 128\n",
+      "Output Dim: 23\n",
+      "Dropout Rate: 0.4\n",
+      "learning Rate: 0.0013\n",
+      "epochs: 30\n"
+     ]
+    }
+   ],
    "source": [
     "# Define loss function and optimizer\n",
     "loss_function = nn.CrossEntropyLoss()\n",
@@ -483,10 +629,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b6d2d0cb-8ac2-49fb-92fa-73ae346bff47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/30], Loss: 1.4623, Accuracy: 0.6981\n",
+      "Epoch [2/30], Loss: 0.4983, Accuracy: 0.8921\n",
+      "Epoch [3/30], Loss: 0.3534, Accuracy: 0.9128\n",
+      "Epoch [4/30], Loss: 0.2362, Accuracy: 0.9398\n",
+      "Epoch [5/30], Loss: 0.1899, Accuracy: 0.9553\n",
+      "Epoch [6/30], Loss: 0.1579, Accuracy: 0.9605\n",
+      "Epoch [7/30], Loss: 0.1262, Accuracy: 0.9650\n",
+      "Epoch [8/30], Loss: 0.1151, Accuracy: 0.9694\n",
+      "Epoch [9/30], Loss: 0.1045, Accuracy: 0.9711\n",
+      "Epoch [10/30], Loss: 0.1036, Accuracy: 0.9715\n",
+      "Epoch [11/30], Loss: 0.0863, Accuracy: 0.9732\n",
+      "Epoch [12/30], Loss: 0.0871, Accuracy: 0.9750\n",
+      "Epoch [13/30], Loss: 0.0601, Accuracy: 0.9810\n",
+      "Epoch [14/30], Loss: 0.0573, Accuracy: 0.9849\n",
+      "Epoch [15/30], Loss: 0.0596, Accuracy: 0.9849\n",
+      "Epoch [16/30], Loss: 0.0434, Accuracy: 0.9873\n",
+      "Epoch [17/30], Loss: 0.0587, Accuracy: 0.9825\n",
+      "Epoch [18/30], Loss: 0.0517, Accuracy: 0.9849\n",
+      "Epoch [19/30], Loss: 0.0465, Accuracy: 0.9860\n",
+      "Epoch [20/30], Loss: 0.0440, Accuracy: 0.9883\n",
+      "Epoch [21/30], Loss: 0.0308, Accuracy: 0.9899\n",
+      "Epoch [22/30], Loss: 0.0361, Accuracy: 0.9883\n",
+      "Epoch [23/30], Loss: 0.0327, Accuracy: 0.9899\n",
+      "Epoch [24/30], Loss: 0.0365, Accuracy: 0.9892\n",
+      "Epoch [25/30], Loss: 0.0414, Accuracy: 0.9888\n",
+      "Epoch [26/30], Loss: 0.0255, Accuracy: 0.9907\n",
+      "Epoch [27/30], Loss: 0.0208, Accuracy: 0.9942\n",
+      "Epoch [28/30], Loss: 0.0311, Accuracy: 0.9905\n",
+      "Epoch [29/30], Loss: 0.0225, Accuracy: 0.9931\n",
+      "Epoch [30/30], Loss: 0.0252, Accuracy: 0.9916\n",
+      "Test Loss: 0.3690\n",
+      "Test Accuracy: 0.9529\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9529411764705882"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Pick the model and train it. Evaluate the model on the test set.\n",
     "# choose model to train, uncomment the model you want to train and comment the other one\n",
@@ -538,10 +733,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b946f191-fb57-4dc4-8de3-0a9cbe19683e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load the trained model and tokenizer from saved files\n",
     "from intent_classifier import IntentClassifier\n",
@@ -560,10 +766,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5756d7fa-efef-4d2f-b386-2f572ae9dbf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted label: [{'label': 'flight', 'confidence': 0.5488210320472717}, {'label': 'flight+airfare', 'confidence': 0.1740250289440155}, {'label': 'airline', 'confidence': 0.17155487835407257}]\n"
+     ]
+    }
+   ],
    "source": [
     "# Predict on a query\n",
     "max_query_length = 50\n",
@@ -616,7 +830,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
