another try to show the pictures in github notebooks

--- a/2. Hyperparameter Optimization.ipynb
+++ b/2. Hyperparameter Optimization.ipynb
@@ -700,6 +700,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "![Plotly Contours](plotly_contours.png)"
    ]
   },
@@ -707,6 +708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "You can make very nice conclusions about embedding dimensions and hidden dimmesions along with other dimensions and even restart the study from here. For \n",
     "1. Embedding dimension is ideal somewhere between 100 and 300\n",
     "2. Hidden dimension is ideal between 50 50 100\n",
@@ -738,6 +740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "![Parallel Coordinates](plot_parallel_coordinate.png)"
    ]
   },
@@ -745,11 +748,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To check Optuna's complete set of visualizations do the following:\n",
     "\n",
+    "To check Optuna's complete set of visualizations do the following:\n",
+    "```\n",
     "!pip install optuna-dashboard\n",
     "\n",
-    "!optuna-dashboard sqlite:///IntentClassifierLSTMWithAttention.db "
+    "!optuna-dashboard sqlite:///IntentClassifierLSTMWithAttention.db \n",
+    "```"
    ]
   },
   {
