--- a/Mistral/Supervised_fine_tuning_(SFT)_of_an_LLM_using_Hugging_Face_tooling.ipynb
+++ b/Mistral/Supervised_fine_tuning_(SFT)_of_an_LLM_using_Hugging_Face_tooling.ipynb
@@ -124,7 +124,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!MAX_JOBS=4 pip -v install flash-attn==2.6.3 --no-build-isolation"
+        "!python -m pip install --upgrade pip wheel setuptools\n",
+        "!MAX_JOBS=64 pip -v install flash-attn==2.6.3 --no-build-isolation"
       ],
       "metadata": {
         "colab": {
