--- a/Mistral/Supervised_fine_tuning_(SFT)_of_an_LLM_using_Hugging_Face_tooling.ipynb
+++ b/Mistral/Supervised_fine_tuning_(SFT)_of_an_LLM_using_Hugging_Face_tooling.ipynb
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "-9357hGFRqdi"
       },
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "rxpq51gW_ySc"
       },
-      "execution_count": 12,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iNJvtR1wGxHm",
-        "outputId": "b3cb8f30-4608-43aa-911d-529c44f825ba"
+        "outputId": "a683f853-9531-4c5f-a0c3-55b6d210965a"
       },
       "execution_count": null,
       "outputs": [
@@ -140,7 +140,38 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Using pip 24.1.2 from /usr/local/lib/python3.10/dist-packages/pip (python 3.10)\n",
+            "Requirement already satisfied: pip in /usr/local/lib/python3.10/dist-packages (24.1.2)\n",
+            "Collecting pip\n",
+            "  Downloading pip-24.3.1-py3-none-any.whl.metadata (3.7 kB)\n",
+            "Requirement already satisfied: wheel in /usr/local/lib/python3.10/dist-packages (0.44.0)\n",
+            "Collecting wheel\n",
+            "  Downloading wheel-0.45.0-py3-none-any.whl.metadata (2.3 kB)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (75.1.0)\n",
+            "Collecting setuptools\n",
+            "  Downloading setuptools-75.5.0-py3-none-any.whl.metadata (6.8 kB)\n",
+            "Downloading pip-24.3.1-py3-none-any.whl (1.8 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m22.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading wheel-0.45.0-py3-none-any.whl (72 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m72.5/72.5 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading setuptools-75.5.0-py3-none-any.whl (1.2 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m50.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: wheel, setuptools, pip\n",
+            "  Attempting uninstall: wheel\n",
+            "    Found existing installation: wheel 0.44.0\n",
+            "    Uninstalling wheel-0.44.0:\n",
+            "      Successfully uninstalled wheel-0.44.0\n",
+            "  Attempting uninstall: setuptools\n",
+            "    Found existing installation: setuptools 75.1.0\n",
+            "    Uninstalling setuptools-75.1.0:\n",
+            "      Successfully uninstalled setuptools-75.1.0\n",
+            "  Attempting uninstall: pip\n",
+            "    Found existing installation: pip 24.1.2\n",
+            "    Uninstalling pip-24.1.2:\n",
+            "      Successfully uninstalled pip-24.1.2\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "ipython 7.34.0 requires jedi>=0.16, which is not installed.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed pip-24.3.1 setuptools-75.5.0 wheel-0.45.0\n",
+            "Using pip 24.3.1 from /usr/local/lib/python3.10/dist-packages/pip (python 3.10)\n",
             "Collecting flash-attn==2.6.3\n",
             "  Using cached flash_attn-2.6.3.tar.gz (2.6 MB)\n",
             "  Running command python setup.py egg_info\n",
@@ -161,15 +192,15 @@
             "\n",
             "\n",
             "  running egg_info\n",
-            "  creating /tmp/pip-pip-egg-info-yls5cv6u/flash_attn.egg-info\n",
-            "  writing /tmp/pip-pip-egg-info-yls5cv6u/flash_attn.egg-info/PKG-INFO\n",
-            "  writing dependency_links to /tmp/pip-pip-egg-info-yls5cv6u/flash_attn.egg-info/dependency_links.txt\n",
-            "  writing requirements to /tmp/pip-pip-egg-info-yls5cv6u/flash_attn.egg-info/requires.txt\n",
-            "  writing top-level names to /tmp/pip-pip-egg-info-yls5cv6u/flash_attn.egg-info/top_level.txt\n",
-            "  writing manifest file '/tmp/pip-pip-egg-info-yls5cv6u/flash_attn.egg-info/SOURCES.txt'\n",
+            "  creating /tmp/pip-pip-egg-info-lixkfnkq/flash_attn.egg-info\n",
+            "  writing /tmp/pip-pip-egg-info-lixkfnkq/flash_attn.egg-info/PKG-INFO\n",
+            "  writing dependency_links to /tmp/pip-pip-egg-info-lixkfnkq/flash_attn.egg-info/dependency_links.txt\n",
+            "  writing requirements to /tmp/pip-pip-egg-info-lixkfnkq/flash_attn.egg-info/requires.txt\n",
+            "  writing top-level names to /tmp/pip-pip-egg-info-lixkfnkq/flash_attn.egg-info/top_level.txt\n",
+            "  writing manifest file '/tmp/pip-pip-egg-info-lixkfnkq/flash_attn.egg-info/SOURCES.txt'\n",
             "  /usr/local/lib/python3.10/dist-packages/torch/utils/cpp_extension.py:497: UserWarning: Attempted to use ninja as the BuildExtension backend but we could not find ninja.. Falling back to using the slow distutils backend.\n",
             "    warnings.warn(msg.format('we could not find ninja.'))\n",
-            "  reading manifest file '/tmp/pip-pip-egg-info-yls5cv6u/flash_attn.egg-info/SOURCES.txt'\n",
+            "  reading manifest file '/tmp/pip-pip-egg-info-lixkfnkq/flash_attn.egg-info/SOURCES.txt'\n",
             "  reading manifest template 'MANIFEST.in'\n",
             "  warning: no files found matching '*.cu' under directory 'flash_attn'\n",
             "  warning: no files found matching '*.h' under directory 'flash_attn'\n",
@@ -178,7 +209,7 @@
             "  warning: no files found matching '*.hpp' under directory 'flash_attn'\n",
             "  adding license file 'LICENSE'\n",
             "  adding license file 'AUTHORS'\n",
-            "  writing manifest file '/tmp/pip-pip-egg-info-yls5cv6u/flash_attn.egg-info/SOURCES.txt'\n",
+            "  writing manifest file '/tmp/pip-pip-egg-info-lixkfnkq/flash_attn.egg-info/SOURCES.txt'\n",
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: torch in /usr/local/lib/python3.10/dist-packages (from flash-attn==2.6.3) (2.5.0+cu121)\n",
             "Requirement already satisfied: einops in /usr/local/lib/python3.10/dist-packages (from flash-attn==2.6.3) (0.8.0)\n",
@@ -284,8 +315,8 @@
             "  building 'flash_attn_2_cuda' extension\n",
             "  creating build/temp.linux-x86_64-cpython-310/csrc/flash_attn\n",
             "  creating build/temp.linux-x86_64-cpython-310/csrc/flash_attn/src\n",
-            "  x86_64-linux-gnu-g++ -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O2 -Wall -g -fstack-protector-strong -Wformat -Werror=format-security -g -fwrapv -O2 -fPIC -I/tmp/pip-install-dncq8ypw/flash-attn_63876de1ecd340d38609a792391c6008/csrc/flash_attn -I/tmp/pip-install-dncq8ypw/flash-attn_63876de1ecd340d38609a792391c6008/csrc/flash_attn/src -I/tmp/pip-install-dncq8ypw/flash-attn_63876de1ecd340d38609a792391c6008/csrc/cutlass/include -I/usr/local/lib/python3.10/dist-packages/torch/include -I/usr/local/lib/python3.10/dist-packages/torch/include/torch/csrc/api/include -I/usr/local/lib/python3.10/dist-packages/torch/include/TH -I/usr/local/lib/python3.10/dist-packages/torch/include/THC -I/usr/local/cuda/include -I/usr/include/python3.10 -c csrc/flash_attn/flash_api.cpp -o build/temp.linux-x86_64-cpython-310/csrc/flash_attn/flash_api.o -O3 -std=c++17 -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\\\"_gcc\\\" -DPYBIND11_STDLIB=\\\"_libstdcpp\\\" -DPYBIND11_BUILD_ABI=\\\"_cxxabi1011\\\" -DTORCH_EXTENSION_NAME=flash_attn_2_cuda -D_GLIBCXX_USE_CXX11_ABI=0\n",
-            "  /usr/local/cuda/bin/nvcc -I/tmp/pip-install-dncq8ypw/flash-attn_63876de1ecd340d38609a792391c6008/csrc/flash_attn -I/tmp/pip-install-dncq8ypw/flash-attn_63876de1ecd340d38609a792391c6008/csrc/flash_attn/src -I/tmp/pip-install-dncq8ypw/flash-attn_63876de1ecd340d38609a792391c6008/csrc/cutlass/include -I/usr/local/lib/python3.10/dist-packages/torch/include -I/usr/local/lib/python3.10/dist-packages/torch/include/torch/csrc/api/include -I/usr/local/lib/python3.10/dist-packages/torch/include/TH -I/usr/local/lib/python3.10/dist-packages/torch/include/THC -I/usr/local/cuda/include -I/usr/include/python3.10 -c csrc/flash_attn/src/flash_bwd_hdim128_bf16_causal_sm80.cu -o build/temp.linux-x86_64-cpython-310/csrc/flash_attn/src/flash_bwd_hdim128_bf16_causal_sm80.o -D__CUDA_NO_HALF_OPERATORS__ -D__CUDA_NO_HALF_CONVERSIONS__ -D__CUDA_NO_BFLOAT16_CONVERSIONS__ -D__CUDA_NO_HALF2_OPERATORS__ --expt-relaxed-constexpr --compiler-options '-fPIC' -O3 -std=c++17 -U__CUDA_NO_HALF_OPERATORS__ -U__CUDA_NO_HALF_CONVERSIONS__ -U__CUDA_NO_HALF2_OPERATORS__ -U__CUDA_NO_BFLOAT16_CONVERSIONS__ --expt-relaxed-constexpr --expt-extended-lambda --use_fast_math -gencode arch=compute_80,code=sm_80 -gencode arch=compute_90,code=sm_90 --threads 4 -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\\\"_gcc\\\" -DPYBIND11_STDLIB=\\\"_libstdcpp\\\" -DPYBIND11_BUILD_ABI=\\\"_cxxabi1011\\\" -DTORCH_EXTENSION_NAME=flash_attn_2_cuda -D_GLIBCXX_USE_CXX11_ABI=0\n"
+            "  x86_64-linux-gnu-g++ -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O2 -Wall -g -fstack-protector-strong -Wformat -Werror=format-security -g -fwrapv -O2 -fPIC -I/tmp/pip-install-_i9ozswi/flash-attn_c411f1124b8a448390372def9c0cdf93/csrc/flash_attn -I/tmp/pip-install-_i9ozswi/flash-attn_c411f1124b8a448390372def9c0cdf93/csrc/flash_attn/src -I/tmp/pip-install-_i9ozswi/flash-attn_c411f1124b8a448390372def9c0cdf93/csrc/cutlass/include -I/usr/local/lib/python3.10/dist-packages/torch/include -I/usr/local/lib/python3.10/dist-packages/torch/include/torch/csrc/api/include -I/usr/local/lib/python3.10/dist-packages/torch/include/TH -I/usr/local/lib/python3.10/dist-packages/torch/include/THC -I/usr/local/cuda/include -I/usr/include/python3.10 -c csrc/flash_attn/flash_api.cpp -o build/temp.linux-x86_64-cpython-310/csrc/flash_attn/flash_api.o -O3 -std=c++17 -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\\\"_gcc\\\" -DPYBIND11_STDLIB=\\\"_libstdcpp\\\" -DPYBIND11_BUILD_ABI=\\\"_cxxabi1011\\\" -DTORCH_EXTENSION_NAME=flash_attn_2_cuda -D_GLIBCXX_USE_CXX11_ABI=0\n",
+            "  /usr/local/cuda/bin/nvcc -I/tmp/pip-install-_i9ozswi/flash-attn_c411f1124b8a448390372def9c0cdf93/csrc/flash_attn -I/tmp/pip-install-_i9ozswi/flash-attn_c411f1124b8a448390372def9c0cdf93/csrc/flash_attn/src -I/tmp/pip-install-_i9ozswi/flash-attn_c411f1124b8a448390372def9c0cdf93/csrc/cutlass/include -I/usr/local/lib/python3.10/dist-packages/torch/include -I/usr/local/lib/python3.10/dist-packages/torch/include/torch/csrc/api/include -I/usr/local/lib/python3.10/dist-packages/torch/include/TH -I/usr/local/lib/python3.10/dist-packages/torch/include/THC -I/usr/local/cuda/include -I/usr/include/python3.10 -c csrc/flash_attn/src/flash_bwd_hdim128_bf16_causal_sm80.cu -o build/temp.linux-x86_64-cpython-310/csrc/flash_attn/src/flash_bwd_hdim128_bf16_causal_sm80.o -D__CUDA_NO_HALF_OPERATORS__ -D__CUDA_NO_HALF_CONVERSIONS__ -D__CUDA_NO_BFLOAT16_CONVERSIONS__ -D__CUDA_NO_HALF2_OPERATORS__ --expt-relaxed-constexpr --compiler-options '-fPIC' -O3 -std=c++17 -U__CUDA_NO_HALF_OPERATORS__ -U__CUDA_NO_HALF_CONVERSIONS__ -U__CUDA_NO_HALF2_OPERATORS__ -U__CUDA_NO_BFLOAT16_CONVERSIONS__ --expt-relaxed-constexpr --expt-extended-lambda --use_fast_math -gencode arch=compute_80,code=sm_80 -gencode arch=compute_90,code=sm_90 --threads 4 -DTORCH_API_INCLUDE_EXTENSION_H -DPYBIND11_COMPILER_TYPE=\\\"_gcc\\\" -DPYBIND11_STDLIB=\\\"_libstdcpp\\\" -DPYBIND11_BUILD_ABI=\\\"_cxxabi1011\\\" -DTORCH_EXTENSION_NAME=flash_attn_2_cuda -D_GLIBCXX_USE_CXX11_ABI=0\n"
           ]
         }
       ]
